Add the sns login module

--- a/Dipan-Info.plist
+++ b/Dipan-Info.plist
@@ -29,11 +29,20 @@
 	<true/>
 	<key>NSMainNibFile</key>
 	<string>MainWindow</string>
-	<key>UIPrerenderedIcon</key>
-	<true/>
 	<key>UIFileSharingEnabled</key>
 	<false/>
+	<key>UIPrerenderedIcon</key>
+	<true/>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array/>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>dipan</string>
+			</array>
+		</dict>
+	</array>
 </dict>
 </plist>
